fix overflow issue

--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,7 @@
 html {
   font-size: 62.5%;
   font-family: "Arimo", sans-serif;
+  overflow-x: hidden;
 
   /* overflow-x: hidden; */
 }
